ci: publish own package