@@ -50,7 +50,6 @@
         <version>3.10.1</version>
         <configuration>
           <release>19</release>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -71,9 +70,6 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
